# root-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
root/: cli.py  config.py  context.py  executor.py  memory.py  risk.py  session.py  theme.py  translate.py  version.py
root/backends/: ollama.py  openai.py
root/plugins/: __init__.py  base.py  bat.py  fd.py  fzf.py  gh.py  glow.py  gum.py  lazygit.py  registry.py  sherlock.py  ytdlp.py
tests/: test_version.py
